fix: course purchase button align, width, size style not working fixed

--- a/assets/css/tutor-elementor.css
+++ b/assets/css/tutor-elementor.css
@@ -303,113 +303,8 @@
 
 
 /* Enrollment */
-.elementor-widget-container .tutor-course-enrollment-box {
-	margin-bottom: 0;
-}
-.elementor-widget-container .tutor-course-enrolled-wrap {
-	padding: 10px 0;
-}
-.etlms-course-enrolment-box .tutor-lead-info-btn-group {
-	padding: 0;
-	margin: 0 0 20px;
-	border-bottom: 0px;
-}
-.etlms-course-enrolment-box .tutor-course-enrolled-wrap {
-	margin: 0 !important;
-}
-.etlms-course-enrolment-box .tutor-course-enrolled-wrap p {
-	display: inline-block;
-}
-.etlms-course-enrolment-box .tutor-course-enrolled-wrap p i {
-	display: contents;
-}
-.etlms-course-enrolment-box .tutor-lead-info-btn-group,
-.etlms-course-enrolment-box .tutor-lead-info-btn-group form,
-.etlms-course-enrolment-box .tutor-course-purchase-box,
-.etlms-course-enrolment-box .tutor-course-purchase-box form,
-.etlms-course-enrolment-box .tutor-course-enroll-wrap,
-.etlms-course-enrolment-box .generate-course-gradebook-btn-wrap,
-.etlms-course-enrolment-box .tutor-course-enrolled-wrap {
-	width: 100%;
-	display: -webkit-box;
-	display: -ms-flexbox;
-	display: flex;
-	-webkit-box-orient: vertical;
-	-webkit-box-direction: normal;
-	    -ms-flex-direction: column;
-	        flex-direction: column;
-}
-.etlms-course-enrolment-box .tutor-course-purchase-box a {
-	width: 100%;
-	margin-top: 0;
-}
-.etlms-course-enrolment-box.elementor-align-left .tutor-lead-info-btn-group,
-.etlms-course-enrolment-box.elementor-align-left .tutor-lead-info-btn-group form,
-.etlms-course-enrolment-box.elementor-align-left .tutor-course-purchase-box .etlms-course-enrolment-box.elementor-align-left .tutor-course-purchase-box form,
-.etlms-course-enrolment-box.elementor-align-left .tutor-course-enroll-wrap,
-.etlms-course-enrolment-box.elementor-align-left .generate-course-gradebook-btn-wrap,
-.etlms-course-enrolment-box.elementor-align-left .tutor-course-enrolled-wrap {
-	-webkit-box-align: start;
-	    -ms-flex-align: start;
-	        align-items: flex-start;
-}
-.etlms-course-enrolment-box.elementor-align-right .tutor-lead-info-btn-group,
-.etlms-course-enrolment-box.elementor-align-right .tutor-lead-info-btn-group form,
-.etlms-course-enrolment-box.elementor-align-right .tutor-course-purchase-box,
-.etlms-course-enrolment-box.elementor-align-right .tutor-course-purchase-box form,
-.etlms-course-enrolment-box.elementor-align-right .tutor-course-enroll-wrap,
-.etlms-course-enrolment-box.elementor-align-right .generate-course-gradebook-btn-wrap,
-.etlms-course-enrolment-box.elementor-align-right .tutor-course-enrolled-wrap {
-	-webkit-box-align: end;
-	    -ms-flex-align: end;
-	        align-items: flex-end;
-}
-.etlms-course-enrolment-box.elementor-align-center .tutor-lead-info-btn-group,
-.etlms-course-enrolment-box.elementor-align-center .tutor-lead-info-btn-group form,
-.etlms-course-enrolment-box.elementor-align-center .tutor-course-purchase-box,
-.etlms-course-enrolment-box.elementor-align-center .tutor-course-purchase-box form,
-.etlms-course-enrolment-box.elementor-align-center .tutor-course-enroll-wrap,
-.etlms-course-enrolment-box.elementor-align-center .generate-course-gradebook-btn-wrap,
-.etlms-course-enrolment-box.elementor-align-center .tutor-course-enrolled-wrap {
-	-webkit-box-align: center;
-	    -ms-flex-align: center;
-	        align-items: center;
-}
-.etlms-course-enrolment-box.course-enroll-buttons-size-small .tutor-btn.tutor-btn-icon.tutor-btn-lg,
-.etlms-course-enrolment-box.course-enroll-buttons-size-small .tutor-btn:not(.tutor-is-icon-btn),
-.etlms-course-enrolment-box.course-enroll-buttons-size-small .tutor-btn:not(.tutor-btn-icon).tutor-btn-lg {
-	padding: 9px 14px;
-	line-height: 19px !important;
-}
 
-.etlms-course-enrolment-box.course-enroll-buttons-size-large .tutor-btn:not(.tutor-btn-icon).tutor-btn-lg {
-	font-size: 16px;
-	display: inline-block !important;
-	line-height: 40px !important;
-}
-.etlms-course-enrolment-box.course-enroll-buttons-size-large .tutor-btn.tutor-btn-icon.tutor-btn-lg, 
-.etlms-course-enrolment-box.course-enroll-buttons-size-large .tutor-btn:not(.tutor-is-icon-btn) {
-	font-size: 16px;
-	line-height: 40px !important;
-}
-
-.etlms-course-enrolment-box.course-enroll-buttons-width-auto button,
-.etlms-course-enrolment-box.course-enroll-buttons-width-auto .tutor-is-fullwidth.start-continue-retake-button,
-.etlms-course-enrolment-box.course-enroll-buttons-width-auto .tutor-button {
-	width: -webkit-fit-content !important;
-	width: -moz-fit-content !important;
-	width: fit-content !important;
-}
-.etlms-course-enrolment-box.course-enroll-buttons-width-fill button,
-.etlms-course-enrolment-box.course-enroll-buttons-width-fill .tutor-button {
-	width: 100% !important;
-	-webkit-box-align: center;
-	    -ms-flex-align: center;
-	        align-items: center;
-	-webkit-box-pack: center;
-	    -ms-flex-pack: center;
-	        justify-content: center;
-}
+/* Enrollemnt style end*/
 
 /* Tag */
 .etlms-course-tags .tutor-course-tags a {
